--- a/tripleo_director_debug.adoc
+++ b/tripleo_director_debug.adoc
@@ -15,15 +15,15 @@
 
 *undercloud.conf options*
 
------
-undercloud_debug = false  -->  only enable debug if needed
+
+ undercloud_debug = false  -->  only enable debug if needed
 enable_telemetry = false  -->  disable telemetry if its not needed
 automated_clean = true    --> (is osp11 as clean_nodes=true) runs wipefs --force --all before making node available
 enable_tempest = true     --> if you want to certifie your overcloud after deploy
 enable_ui = false         --> tripleo UI
 enable_validations = true --> Overcloud Ansible Validations
 enabled_drivers = pxe_ipmitool,pxe_drac --> if you need to enable a specific driver
------
+
 
 You can also override hieradata of the undercloud install,undercloud.conf
 
@@ -41,25 +41,25 @@ __EOF__
 
 Keystone worker counts: increase the worker count to available cpus/2 if you have enough ram
 
-----
-[root@undercloud ~]# cat /etc/httpd/conf.d/10-keystone_wsgi_admin.conf | grep processes
+
+ [root@undercloud ~]# cat /etc/httpd/conf.d/10-keystone_wsgi_admin.conf | grep processes
   WSGIDaemonProcess keystone_admin display-name=keystone-admin group=keystone processes=4 threads=2 user=keystone
 [root@undercloud ~]# cat /etc/httpd/conf.d/10-keystone_wsgi_main.conf  | grep processes
   WSGIDaemonProcess keystone_main display-name=keystone-main group=keystone processes=4 threads=2 user=keystone
-----
+
 
 Heat RPC response timeout, increase to 600 to be on the safe side
 
-----
-[root@undercloud ~]# cat /etc/heat/heat.conf | grep ^rpc_response_timeout
+
+ [root@undercloud ~]# cat /etc/heat/heat.conf | grep ^rpc_response_timeout
 rpc_response_timeout = 600
-----
+
 
 === Undercloud install Debug
 
 TODO!!
 
-=== Enrolling overcloud 
+=== Enrolling overcloud Nodes
 
 When enrolling overcloud nodes with the import command, the ironic driver tests the connectivity with the Ilo/drac
 
@@ -100,8 +100,8 @@ Fix the problem with the BMC connection, and rerun the baremetal import command 
 === Introspection Debug
 *Logs*
 
-----
-[root@undercloud ironic]# ls -l /var/log/ironic-inspector/*.log
+
+ [root@undercloud ironic]# ls -l /var/log/ironic-inspector/*.log
 -rw-r--r--. 1 ironic-inspector ironic-inspector 32080 Jun  1 10:37 /var/log/ironic-inspector/ironic-inspector.log
 [root@undercloud ironic]# ls -l /var/log/ironic/*.log
 -rw-r--r--. 1 ironic ironic 2238295 Jun  3 08:26 /var/log/ironic/ironic-api.log
@@ -110,7 +110,7 @@ root@undercloud ~]# journalctl -u openstack-ironic-inspector -u openstack-ironic
 Jun 07 09:07:57 undercloud.localdomain ironic-inspector[1236]: 2017-06-07 09:07:57.353 1236 INFO ironic_inspector.node_cache [-] [node: ba4db2bf-c327-4fca-a37e-83cc17c1561a state processing] Updating node state: processing --> finished
 Jun 07 09:07:57 undercloud.localdomain ironic-inspector[1236]: 2017-06-07 09:07:57.347 1236 INFO ironic_inspector.process [-] [node: ba4db2bf-c327-4fca-a37e-83cc17c1561a MAC aa:bb:cc:dd:ee:02] Introspection finished successfully
 Jun 07 09:07:57 undercloud.localdomain ironic-inspector[1236]: 2017-06-07 09:07:57.315 1236 INFO ironic_inspector.process [-] [node: ba4db2bf-c327-4fca-a37e-83cc17c1561a MAC aa:bb:cc:dd:ee:02] Node powered-off
-----
+
 
 *Accessing logs from the ram disk run*
 
@@ -118,38 +118,37 @@ If something fails during the introspection ramdisk run, ironic-inspector stores
 
 If you want to inspect the ram disk run even if it didn't fail we have to modify the always_store_ramdisk_logs option in  /etc/ironic-inspector/inspector.conf and restart the service
 
-----
-[root@undercloud ~]# sed -ibck 's/^.*always_store_ramdisk_logs.*$/always_store_ramdisk_logs = true/g' /etc/ironic-inspector/inspector.conf
+
+ [root@undercloud ~]# sed -ibck 's/^.*always_store_ramdisk_logs.*$/always_store_ramdisk_logs = true/g' /etc/ironic-inspector/inspector.conf
 [root@undercloud ~]#  openstack baremetal introspection start ba4db2bf-c327-4fca-a37e-83cc17c1561a
 [root@undercloud ~]# systemctl restart openstack-ironic-inspector.service
 [root@undercloud ~]# ls -l /var/log/ironic-inspector/ramdisk/
 total 20
 -rw-r--r--. 1 ironic-inspector ironic-inspector 16820 Jun  7 09:16 ba4db2bf-c327-4fca-a37e-83cc17c1561a_20170607-131619.504127.tar.gz
-----
+
 
 *Log into the ramdisk for debugging via ssh/console*
 
 Use ssl to create a hash for a password
 
-----
-[root@undercloud ~]# openssl passwd -1
+
+ [root@undercloud ~]# openssl passwd -1
 Password: 
 Verifying - Password: 
 $1$ZqPeffYv$CvGO/oS8b28YRdMMS2WCF1
-----
+
 
 Edit /httpboot/inspector.ipxe manually. Find the line starting with “kernel” and append rootpwd=”HASH” to it, also disable selinux with the selinux=0 option
 
-----
-[root@undercloud ~]# cat /httpboot/inspector.ipxe 
-#!ipxe
 
+ [root@undercloud ~]# cat /httpboot/inspector.ipxe 
+#!ipxe
 :retry_boot
 imgfree
 kernel --timeout 60000 http://10.0.0.10:8088/agent.kernel ipa-inspection-callback-url=http://10.0.0.10:5050/v1/continue ipa-inspection-collectors=default,extra-hardware,logs systemd.journald.forward_to_console=yes BOOTIF=${mac} ipa-inspection-dhcp-all-interfaces=1 ipa-collect-lldp=1 initrd=agent.ramdisk rootpwd="$1$UQ/HlKRP$pXaAJKgSS7z7SPqOTH0FV/" selinux=0 || goto retry_boot
 initrd --timeout 60000 http://10.0.0.10:8088/agent.ramdisk || goto retry_boot
 boot
-----
+
 
 We can see the options we added to the cmdline being lodaded on the next ram disk run
 
@@ -1574,7 +1573,7 @@ Heat seeds the SoftwareDeployment to the nodes in the form of metadata, and reli
 
 The hieradata files are populated from metadata in heat by the 40-hiera-datafiles script that is run by os-refresh-config, it dumps thehieradata info in /etc/puppet/hieradata, it can be very usefull to check variable data in this dir, so for example we are wondering were this ip came from
 
-`[root@ctrl01 hieradata]# pcs status | grep 192.168.2.190
+ [root@ctrl01 hieradata]# pcs status | grep 192.168.2.190
 ip-192.168.2.190       (ocf::heartbeat:IPaddr2):       Started ctrl01`
 
 We can check in the hieradata files
@@ -1644,7 +1643,7 @@ Delete the supporting files related to the previous installation.
 
 With that you have removed your overcloud if you need to go further and delete the ironic nodes you can do
 
-for uuid in $(ironic node-list | grep -v UUID | awk -F'|' '{ print $2}' | xargs`) ; do
+ for uuid in $(ironic node-list | grep -v UUID | awk -F'|' '{ print $2}' | xargs`) ; do
     ironic node-set-maintenance $uuid false
     ironic node-delete $uuid
 done
